Fixed the card alignment to match the Skills section.

--- a/jcmnowebpage/src/components/Education/Education.css
+++ b/jcmnowebpage/src/components/Education/Education.css
@@ -10,15 +10,13 @@
     box-shadow: 5px 5px 5px grey;
     padding: 20px;
     width: 380px;
-    margin-left: 10px;
+    margin: 10px;
     margin-top: 35px;
     height: 250px;
     margin-top: 20;
     background: #8ACE00;
     display: inline-block;
     overflow: hidden;
-    
-
 }
 
 .eduTitle{
